--- a/css/desktop.css
+++ b/css/desktop.css
@@ -33,17 +33,31 @@ a:active{
 
 header{
 	height: 4em;
+	top:-1.3em;
+}
+footer{
+	top:-4em;
 }
 
-
 .support{
-	top:4.9em;
-	left:3%;
+	top:-1.6em;
+	left:0%;
+	width: 30%;
 	font-weight: solid;
 	
 	}
 	.calculator{
         width:30%;}
 
+		.follow a i{
+			font-size:3.3em;
+			padding:10px;
+			border-radius: 10px;
+	
+		}
+		 .fulldiv{
+			 top:-5em;
+
+		}
 
 }
