--- a/css/tablet.css
+++ b/css/tablet.css
@@ -36,24 +36,35 @@
 		
 	}
 
-
 	header{
-		height: 3em;
+		height: 4em;
+		top:-1.3em;
 	}
+	footer{
+		top:-3em;
+	}
+	
 	.support{
-		top:3.6em;
-		left:3%;
-		font-size: 16px;
+		top:-1.6em;
+		left:0%;
+		width: 35%;
 		font-weight: solid;
-		line-height: 20px;
-		padding: 4px;
 		
 		}
-		.support ul li{
-			line-height: 0px;
-			margin:0px;
-			
-			}
+
+		.fulldiv{
+			top:-3em;
+
+	   }
+	   
+		.follow a i{
+			font-size:2em;
+			padding:6px;
+			border-radius: 8px;
+	
+		}
+
+		
 	.calculator{
         width:50%;}
 
